@startuml
class forStudent.Stand {
- int maxChargeTurn
- int currentChargeTurn
- boolean isActive
+ int getMaxChargeTurn()
+ int getCurrentChargeTurn()
+ void increaseCharge(int)
+ void decreaseCharge(int)
+ boolean IsActive()
+ void setIsActive(boolean)
+ void printShowStat()
+ Stand selectStand()
}


class forStudent.StandUser {
- int maxHp
- int currentHp
- boolean isGuard
- Stand stand
+ int takeDamage(int)
+ int doDamage(StandUser)
+ int getMaxHp()
+ int getCurrentHp()
+ void setCurrentHp(int)
+ boolean isGuard()
+ void setGuard(boolean)
+ void setStand(Stand)
+ void printShowStat()
+ StandUser selectStandUser()
}




forStudent.Character <|-- forStudent.Stand
forStudent.Character <|-- forStudent.StandUser
@enduml